--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Jogo da velha</title>
-		<link rel="shortcut icon" href="style/imagens/simbolo.jpg">
+		<link rel="shortcut icon" href="imagens/simbolo.jpg">
 		<script src="JS.js"></script>
 		<link rel="stylesheet" type="text/css" href="css1.css">
 		<meta charset="utf-8">
